--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,31 @@
 <app-toolbar></app-toolbar>
 
 <div class="content" role="main">
+  <div class="container">
+    <div class="row">
+      <div class="col px-md-5 p-3">
+        <h2>Device Test</h2>
+        <button (click)="onButtonClick()">
+            Click Me
+          </button>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col p-3">
+        <app-slider></app-slider>
+      </div>
+      <div class="col p-3">
+        <app-slider></app-slider>
+      </div>
+      <div class="col p-3">
+        <app-slider></app-slider>
+      </div>
+    </div>
+  </div>
 </div>
+
+
 
 
 <router-outlet></router-outlet>
