added channel class

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,13 @@
     </div>
     <div class="row">
       <div class="col p-3">
-        <app-slider [channelNumber]="1"></app-slider>
+        <app-slider [channel]="channels[0]"></app-slider>
       </div>
       <div class="col p-3">
-        <app-slider [channelNumber]="2"></app-slider>
+        <app-slider [channel]="channels[1]"></app-slider>
       </div>
       <div class="col p-3">
-        <app-slider [channelNumber]="3"></app-slider>
+        <app-slider [channel]="channels[2]"></app-slider>
       </div>
 
     </div>
