improved slider update event emitter

--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -11,7 +11,7 @@
     [step]="1"
     [orientation]="'vertical'"
     [tooltip]="'show'"
-    (change)="onDmxChanged()"
+    (change)="onSliderChanged($event)"
     [reversed] = true
   ></mv-slider>
 </div>
