--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -1,1 +1,23 @@
-<p>configuration works!</p>
+<div class="content" role="main">
+  <div class="container">
+    <div class="row justify-content-between">
+      <div class="col p-3">
+        <h2>Fixtures</h2>
+      </div>
+      <div class="col col-4 p-3">
+        <a href="#" class="btn btn-primary">Add new</a>
+      </div>
+  </div>
+
+
+  <div class="row">
+
+      <app-fixture-card class="col-sm-12 col-lg-3 m-1" [startAddress]="10" [fixtureName]="'LED Flood Panel 1'"></app-fixture-card>
+
+      <app-fixture-card class="col-sm-12 col-lg-3 m-1" [startAddress]="20" [fixtureName]="'LED Flood Panel 2'"></app-fixture-card>
+
+      </div>
+  </div>
+
+
+</div>
