--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" [routerLink] = "''">DMX Controller</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <a class="navbar-brand" [routerLink] = "''">DMX Controller</a>
+  <button class="navbar-toggler" type="button" (click)="collapse.toggle()">
+  <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" [routerLink] = "'/configuration'">Configuration</a>
-      </li>
+  <ngx-navbar-collapse #collapse="ngxNavbarCollapse">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" [routerLink] = "'/configuration'" (click)="collapse.toggle()">Configuration</a>
+          </li>
     </ul>
-  </div>
+  </ngx-navbar-collapse>
 </nav>
