--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -12,9 +12,9 @@
 
   <div class="row">
 
-    <div class="col-sm-12 col-lg-3 m-1" *ngFor="let device of devices">
-        <app-fixture-card *ngIf="device"  [device]="device" (deviceRemoved)="onDeviceRemoved($event)"></app-fixture-card>
-    </div>
+    <ng-container *ngFor="let device of devices">
+        <app-fixture-card class="col-sm-12 col-lg-3 m-1" *ngIf="device"  [device]="device" (deviceRemoved)="onDeviceRemoved($event)"></app-fixture-card>
+    </ng-container>
       </div>
   </div>
 
