--- a/src/app/fixture-card/fixture-card.component.html
+++ b/src/app/fixture-card/fixture-card.component.html
@@ -2,6 +2,21 @@
   <div class="card-body">
     <h5 class="card-title">{{ device.name }}</h5>
     <p class="card-text">Start Address: {{ device.startAddress }}</p>
-<button class="btn btn-outline-danger" (click)="onRemove()">Remove</button>
+    <button class="btn btn-outline-danger" (click)="openModal(template)">Remove</button>
   </div>
 </div>
+
+<ng-template #template>
+    <div class="modal-header">
+      <h4 class="modal-title pull-left">Confirmation</h4>
+      <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      Are you shure to remove the device? This cannot be recovered!
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="onRemove()">Confirm</button>
+      </div>
+  </ng-template>
