--- a/src/app/configuration/configuration.component.html
+++ b/src/app/configuration/configuration.component.html
@@ -5,7 +5,7 @@
         <h2>Fixtures</h2>
       </div>
       <div class="col col-4 p-3">
-        <a href="#" class="btn btn-primary">Add new</a>
+    <button class="btn btn-primary" (click)="openModal(template)">Add New</button>
       </div>
   </div>
 
@@ -17,6 +17,32 @@
     </ng-container>
       </div>
   </div>
-
-
 </div>
+
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Add new device</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+      <div class="form-group">
+        <label for="fixtureSelection">Fixture</label>
+        <select class="form-control" [(ngModel)]="selectedFixture" (change)="onSelection()">
+          <option *ngFor="let fixture of fixtures" id="fixtureSelection" [value]="fixture.name">{{ fixture.name }}</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="deviceName">Device Name</label>
+        <input type="text" class="form-control" id="deviceName" [(ngModel)]="deviceName">
+      </div>
+    
+
+
+  </div>
+  <div class="modal-footer">
+      <button type="button" class="btn btn-primary" (click)="onDeviceAdded()">Add</button>
+      <button type="button" class="btn btn-primary" (click)="onCancelAddDevice()">Cancel</button>
+    </div>
+</ng-template>
